Issue #14, text wrapping for smaller window sizes.

--- a/mocks/css/crazyfish.css
+++ b/mocks/css/crazyfish.css
@@ -11,9 +11,9 @@
   background-color: #0ec7ee;
   font-family: bariol;
  }
-
+ 
  .main-search{
-  min-width: 300px; /* this needs to be larger than the calendar's width */
+  min-width: 330px; /* this needs to be larger than the width of the largest blank / single word*/
   margin: 0px 30px 30px;
   background-color: #057f99;
   color: #fff; /* text color */
@@ -107,6 +107,7 @@ outline: none;}
 .form-group {
     float: left;
     width: 255px;
+    margin-bottom:0; /* prevent form-groups from pushing away other elements, which can look weird on small screens*/
 }
  
 .form-control,
@@ -122,7 +123,6 @@ outline: none;}
     background-clip:border-box; /* back to default */
     webkit-transition: none; /* back to default */
     transition: none;
-    margin-top: -110px;
     width: 255px;
     text-overflow: ellipsis;
     cursor: pointer;
